doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_92\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;F:\Java Project Part 4\Java
-d
F:\Java Project Part 4\Java\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
F:\Java Project Part 4\Java\Shop.java
<---- end of javadoc command ---->
Loading source file F:\Java Project Part 4\Java\Shop.java...
F:\Java Project Part 4\Java\Shop.java:557: error: unclosed string literal
        else{return "}
                    ^
F:\Java Project Part 4\Java\Shop.java:559: error: reached end of file while parsing
}
 ^
2 errors
